added firebase support

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,33 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>OpenThoughts</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+    <meta charset="utf-8">
+    <title>OpenThoughts</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta name="theme-color" content="#1976d2">
 </head>
+
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <div class="row">
+        <div class="col-2">
+            <div class="sidenav m-3">
+                <div class="col-12">ABCD</div>
+                <div class="col-12">EDFG</div>
+                <div class="col-12">HIJK</div>
+                <div class="col-12">LMNO</div>
+            </div>
+        </div>
+        <div class="col-6">
+            <app-root></app-root>
+        </div>
+    </div>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+    </div>
 </body>
+
 </html>
